--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
         </form>
     </div>
     <div class="oval"></div>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDWrRpJmdqyJ7WDaROBe3MuUu8T72qLmdM",
+            authDomain: "budget-tracker-37222.firebaseapp.com",
+            projectId: "budget-tracker-37222",
+            storageBucket: "budget-tracker-37222.appspot.com",
+            messagingSenderId: "750614326013",
+            appId: "1:750614326013:web:5d5265d9a53de2edcf6c94"
+        };
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+
+        import { getDatabase, ref, set, child, get }
+            from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js"
+        const db = getDatabase()
+    </script>
+
 
     <script src="login.js"></script>
 </body>
